--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 09.05.2014, 16:45:52
-    Author     : manuelruck
-*/
-
+form {
+  width: 400px;
+}
