--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,7 @@
-doctype html
-html(lang="de")
-    head
-        title
-            | Social Network
-            script(data-main='js/boot', type='text/javascript', src='/js/libs/require.js')
-        body
-            div#content
+extends layout
+
+block content
+  div#content
+
+block scripts
+  script(data-main='js/boot', type='text/javascript',src='/js/libs/require.js')
